# rsa17

./: .gitignore  CMakeLists.txt  package.xml
cfg/: CrosbotAStarReconfig.cfg  CrosbotExploreReconfig.cfg
emu/: CMakeLists.txt  CMakeLists.txt~  package.xml
emu/include/: controlWrapper.hpp
emu/include/timothyw_emu/: common.hpp
emu/launch/: demo.rviz  emu_demo.launch  emu_demo.launch~  open_day.launch  open_day.launch~
emu/launch/includes/: basicClient.launch  explore.launch  explore.launch~  joystick.launch~
emu/scripts/: emu_joystick.py  emu_joystick.py~
emu/src/: controlWrapper.cpp  controlWrapper.cpp~
emu/src/nodes/: control_node.cpp  control_node.cpp~
include/rsa17/: astar.hpp  driveParameters.hpp  explorer.hpp  explorerROS.hpp  hysteresisData.hpp  hysteresisParameters.hpp  searchParameters.hpp
include/rsa17/astar/: astarParameters.hpp
include/rsa17/basicClient/: actionParameters.hpp  basicClient.hpp  basicClientCommands.hpp
include/rsa17/nodes/: astarExplorerNode.hpp
launch/: basicClient.launch  beacon_locator.launch  demo.rviz  emu_rviz.launch  explore.launch  hw.launch  open_day.launch
launch/includes/: joystick.launch  mapping.launch
msg/: ExplorerFeedback.msg
scripts/: emu_joystick.py  joystick.py  locator.py
src/: astar.cpp  explorer.cpp  explorerROS.cpp
src/basicClient/: actionParameters.cpp  basicClient.cpp
src/nodes/: astar_explorer_node.cpp  astar_planner_node.cpp  basicActionClient_node.cpp  explorer_node.cpp
srv/: SetExplorerMode.srv
